# openscad

./: .gitignore  .rgignore  box.scad  cable-hook.scad  chamfer.scad  container.scad  door-thingy-cover.scad  hexagon.json  hexagon.scad  honeycomb_box.scad  honeycomb_box.stl  install-bosl2  magnet-cable-hook.scad  rounded.scad  slot.scad  sonic-stand.scad  tall-hook.scad  under-desk-grip-usb-charger.stl  under-desk-grip.scad
solidpython/: cable-hole-cover.py  coin.py  dc_power_socket.py  dc_power_socket_jar_body.stl  dc_power_socket_jar_lid.stl  dc_power_socket_lid.stl  diamond.py  diamond.stl  fan_holder.py  fan_holder.stl  honeycomb.py  install  jar.py  pegboard.py  phone_mount_knob.py  phone_mount_knob.stl  pyproject.toml  run-all  toy_scope.py  toy_scope.stl  watch.js  wrench.py  wrench.stl
solidpython/electronics/: dc_power_socket.py  fan_holder.py  fan_holder.stl
solidpython/house/: tree_anchor.py  tree_anchor.stl
solidpython/lib/: arc.py  cable-hook-mark2-medium.stl  cable-hook-mark2-small.stl  cad_object.py  chamfer.py  degrees.py  hexagon_shell.py  honeycomb_square.py  honeycomb_test.py  jar.py  render.py  rounded_polyline.py  rounded_square.py  scad.py  threed.py  twod.py  types.py
solidpython/office/: cable-hole-cover.py  headphones-holder-curved-stand.stl  headphones-holder.3mf  headphones-holder.py  headphones-holder.stl
solidpython/pegboard/: hook.py  mount.py  pegboard.py  pegboard.stl
solidpython/tools/: phone_mount_knob.py  phone_mount_knob.stl  phone_mount_knob_mark2.stl  phone_mount_knob_mark3.stl
solidpython/toys/: coin.py  diamond.py  (+3 more)
(+619 files in other folders)
