[tool.poetry]
name = "elentok-solidpython"
version = "0.1.0"
description = ""
authors = ["David Elentok <3david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
solidpython = {git = "https://github.com/jeff-dh/SolidPython.git", rev = "exp_solid"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
